# openFVeiD

./: .clang-format  .gitignore  CMakeLists.txt  README.md  lenassert.h  main.cpp  resources.rc
.github/workflows/: release.yml
core/: application.cpp  application.h  assets.h  common.cpp  common.h  crashhandler.cpp  crashhandler.h  customstyle.cpp  customstyle.h  dummies.h  exportfuncs.cpp  exportfuncs.h  function.cpp  function.h  globalundohandler.cpp  globalundohandler.h  logger.cpp  logger.h  mnode.cpp  mnode.h  nolimitsimporter.cpp  nolimitsimporter.h  saver.cpp  saver.h  secbezier.cpp  secbezier.h  seccurved.cpp  seccurved.h  secforced.cpp  secforced.h  secgeometric.cpp  secgeometric.h  secgeometricriderlocal.cpp  secgeometricriderlocal.h  secnlcsv.cpp  secnlcsv.h  secstraight.cpp  secstraight.h  section.cpp  section.h  (+12 more)
docs/: coaster_specs.md
renderer/: glframebuffer.cpp  glframebuffer.h  gltexture.cpp  gltexture.h  shaderprogram.cpp  shaderprogram.h  shaders.h  shaderuniforms.h  trackmesh.cpp  trackmesh.h  viewport.cpp  viewport.h
renderer/vulkan/: vulkancontext.cpp
shaders/: floor.frag  floor.vert  normals.frag  normals.vert  simple_shadow.frag  simple_shadow.vert  sky.frag  sky.vert  stl.frag  stl.vert  track.frag  track.vert  track_instanced.vert
shaders/vulkan/: track_instanced.vert
tools/: bin2c.cpp
track_styles/Loundlim/Clearance Envelopes/: Arrow 4D NL2.glb  Arrow 4D clearance (NL2).fvdstyle  Arrow Corkscrew NL2.glb  Arrow Corkscrew clearance (NL2).fvdstyle  Arrow Suspended NL2.glb  Arrow Suspended clearance (NL2).fvdstyle  B&M Dive NL2.glb  B&M Dive clearance (NL2).fvdstyle  B&M Dive with scoops NL2.glb  B&M Dive with scoops clearance (NL2).fvdstyle  B&M Floorless clearance (NL2).fvdstyle  B&M Flyer NL2.glb  B&M Flyer clearance (NL2).fvdstyle  B&M Hyper (4 across) NL2.glb  B&M Hyper (4 across) clearance (NL2).fvdstyle  B&M Hyper (staggered with scoops) NL2.glb  B&M Hyper (staggered with scoops) clearance (NL2).fvdstyle  B&M Hyper (staggered) NL2.glb  B&M Hyper (staggered) clearance (NL2).fvdstyle  B&M Invert NL2.glb  B&M Invert clearance (NL2).fvdstyle  B&M Sitdown NL2.glb  B&M Sitdown clearance (NL2).fvdstyle  B&M Standup NL2.glb  B&M Standup clearance (NL2).fvdstyle  B&M Wing NL2.glb  B&M Wing clearance (NL2).fvdstyle  GCI Millenium Flyer NL2.glb  GCI Millenium Flyer clearance (NL2).fvdstyle  Gerstlauer Bobsled NL2.glb  Gerstlauer Bobsled clearance (NL2).fvdstyle  Gerstlauer Eurofighter (1&2) clearance (NL2).fvdstyle  Gerstlauer Eurofighter (1+2) NL2.glb  Gerstlauer Infinity (1st gen) NL2.glb  Gerstlauer Infinity (2nd gen) NL2.glb  Gerstlauer Infinity 1st gen clearance (NL2).fvdstyle  Gerstlauer Infinity 2nd gen clearance (NL2).fvdstyle  Gerstlauer Spinner NL2.glb  Gerstlauer Spinner clearance (NL2).fvdstyle  Gravity Group Timberliner NL2.glb  (+46 more)
track_styles/Loundlim/Intamin LSM 0.9m/: Connector Tie.glb  Intamin 0.9m single spine welds.fvdstyle  Intamin 0.9m single spine.fvdstyle  Tie with welds.glb  Tie.glb
track_styles/Loundlim/Intamin Tri Tube 0.9m/: 0.9m modern tri tube.fvdstyle  Crossties.glb
track_styles/Loundlim/RMC IBox Track/: Ibox Track Tie.glb  Ibox Track.glb  RMC IBox Track.fvdstyle
track_styles/Loundlim/RMC Topper Track/: RMC Topper Track.fvdstyle  Topper Track Tie.glb  Topper Track.glb
track_styles/Loundlim/S&S Air Launch & Looper/: S&S Airlaunch & Looper.fvdstyle  S&SNewgenTrackForFVD.glb
track_styles/nerfer10/Arrow/: Arrow.fvdstyle  Arrow_Vek Ties.glb
track_styles/nerfer10/B&M/: B&M Joints.glb  B&M Ties.glb  B&M.fvdstyle
track_styles/nerfer10/Generic Flat/: Generic Flat.fvdstyle  Generic Tie.glb
track_styles/nerfer10/Raptor/: Raptor.fvdstyle  Raptor.glb
track_styles/nerfer10/Schwarzkopf/: Schwarskopf.fvdstyle  Schwarzkopf Tie.glb
track_styles/nerfer10/Small Flat/: Small Flat.fvdstyle  Straight Tie.glb
track_styles/xwaldo/bm_classic/: B&M Classic.fvdstyle  bm_classic.glb
track_styles/xwaldo/bm_dive/: B&M Dive.fvdstyle  bm_dive.glb  bm_dive_spine.glb
track_styles/xwaldo/bm_modern/: B&M Modern.fvdstyle  bm_modern.glb  bm_modern_spine.glb
track_styles/xwaldo/gci/: GCI.fvdstyle  gci.glb
track_styles/xwaldo/intamin_hotracer/: Intamin Hot Racer.fvdstyle  hotracer.glb
track_styles/xwaldo/rmc/: RMC.fvdstyle  rmc_crosstie.glb  rmc_track.glb
track_styles/xwaldo/vekoma_mk1101/: Vekoma MK1101.fvdstyle  vekoma.glb
ui/: graphview.cpp  graphview.h  leftpanel.cpp  leftpanel.h  measurementgraphprocessor.cpp  measurementgraphprocessor.h  resultinggraphprocessor.cpp  resultinggraphprocessor.h  transitionview.cpp  transitionview.h
